# aximar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.claude/commands/: release.md
.github/workflows/: build.yml  release-tools.yml  release.yml
crates/aximar-core/: Cargo.toml
crates/aximar-core/src/: capture.rs  commands.rs  error.rs  evaluation.rs  lib.rs  log.rs  notebook.rs  registry.rs  safety.rs  session.rs  session_ops.rs
crates/aximar-core/src/catalog/: catalog.json  core-doc-index.json  doc_index.rs  docs.json  docs.rs  mod.rs  packages.json  packages.rs  search.rs  types.rs
crates/aximar-core/src/maxima/: ax_draw_context.json  ax_plotting.lisp  ax_plotting.mac  ax_plotting_catalog.json  ax_plotting_docs.json  backend.rs  debugger.rs  errors.rs  labels.rs  mod.rs  output.rs  parser.rs  plotting.rs  process.rs  protocol.rs  types.rs  unicode.rs
crates/aximar-core/src/notebooks/: 3d-plotting.json  complex-numbers.json  data.rs  interactive-plotting.json  io.rs  linear-algebra.json  mod.rs  output-display.json  plotting.json  programming.json  statistical-plotting.json  types.rs  vector-calculus.json  welcome.json
crates/aximar-core/src/suggestions/: rules.rs  types.rs
crates/aximar-core/tests/: ax_plotting.rs
crates/aximar-mcp/: Cargo.toml
crates/aximar-mcp/src/: batch.rs  capture.rs  config.rs  convert.rs  http.rs  lib.rs  log.rs  main.rs  notebook.rs  params.rs  server.rs  server_tests.rs  simple_params.rs  simple_server.rs
crates/aximar-mcp/tests/: batch_integration.rs  transport_integration.rs
crates/maxima-dap/: Cargo.toml  README.md
crates/maxima-dap/examples/: 01_basic_breakpoint.mac  02_stepping.mac  03_step_into.mac  04_recursion.mac  05_loop.mac  06_list_variables.mac  07_conditionals.mac  08_multiple_functions.mac  09_symbolic_math.mac  10_error_handling.mac  11_closures_and_lambda.mac  12_matrix_operations.mac  13_deep_call_stack.mac  14_debug_console_eval.mac  15_unverified_breakpoints.mac  16_syntax_error_in_definition.mac  README.md
crates/maxima-dap/src/: breakpoints.rs  frames.rs  lib.rs  main.rs  server.rs  strategy.rs  strategy_enhanced.rs  strategy_legacy.rs  transport.rs  types.rs
crates/maxima-dap/src/server/: breakpoints.rs  communication.rs  execution.rs  inspection.rs  lifecycle.rs  mod.rs  protocol.rs
crates/maxima-dap/tests/: example_parsing.rs  maxima_integration.rs  vscode_protocol.rs
crates/maxima-lsp/: Cargo.toml  README.md
crates/maxima-lsp/src/: completion.rs  convert.rs  definition.rs  document.rs  folding.rs  helpers.rs  hover.rs  lib.rs  main.rs  server.rs  signature.rs  symbols.rs
crates/maxima-mac-parser/: Cargo.toml
docker/: Dockerfile  seccomp.json
docs/: backend-code-quality.md  catalog-gen.md  discoverability-plan.md  doc-resolution.md  equation-editing.md  frontend-separation-of-concerns.md  hover-tooltip-plan.md  ide-features.md  ide-implementation-plan.md  implementation-plan.md  lsp-snippet-completions.md  maxima-dap.md  maxima-debugger-internals.md  maxima-debugger-path-formats.md  maxima-lsp.md  maxima-mac-syntax.md  maxima-protocol.md  mcp-server.md  multi-notebook.md  plotting.md  security.md  technical-debt.md  vscode-integration-usecases.md  wxmaxima-feature-gap.md
docs/examples/: demo1.macnb
docs/ide-integration-research/: README.md  comparison.md  monaco-in-tauri.md  options-overview.md  theia.md  vscode-notebook-api.md
src/: App.tsx  main.tsx  plotly-gl3d.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  state.rs  tauri_output.rs
src-tauri/src/catalog/: catalog.json  docs.rs  search.rs  types.rs
src-tauri/src/commands/: catalog.rs  config.rs  evaluate.rs  mod.rs  notebook.rs  notebooks.rs  plot.rs  session.rs  suggestions.rs  variables.rs  window.rs
src-tauri/src/maxima/: backend.rs  errors.rs  mod.rs  noconsole.rs  parser.rs  process.rs  protocol.rs  types.rs
src-tauri/src/mcp/: controller.rs  mod.rs  startup.rs  sync.rs
src-tauri/src/notebooks/: calculus.json  data.rs  equations.json  linear-algebra.json  programming.json  types.rs  welcome.json
src-tauri/src/suggestions/: rules.rs  types.rs
src/components/: AutocompletePopup.tsx  Cell.tsx  CellOutput.tsx  CellSuggestions.tsx  CommandPalette.tsx  DocsPanel.tsx  EnhancedErrorOutput.tsx  ErrorOutput.tsx  ExportLatexModal.tsx  FindBar.tsx  HoverTooltip.tsx  KatexOutput.tsx  LogPanel.tsx  MarkdownCell.tsx  MathText.tsx  Notebook.tsx  PlotViewer.tsx  PlotlyChart.tsx  RichTextOutput.tsx  SettingsModal.tsx  ShortcutHints.tsx  SignatureHint.tsx  TabBar.tsx  TemplateChooser.tsx  Toolbar.tsx  TrustBanner.tsx  VariablePanel.tsx
src/hooks/: useAutocomplete.ts  useCodeMirrorEditor.ts  useHoverTooltip.ts  useMaxima.ts  useMcpSync.ts  useNotebookEvents.ts  useSignatureHint.ts  useSnippet.ts  useTheme.ts
src/lib/: catalog-client.ts  codemirror-theme.ts  config-client.ts  dirty-inputs.ts  draw-completions.generated.ts  draw-completions.ts  katex-helpers.ts  latex-export.ts  markdown-to-latex.ts  math-symbols.ts  maxima-client.ts  maxima-completions.ts  maxima-hover-tooltip.ts  maxima-language.ts  maxima-signature-hint.ts  notebook-commands.ts  notebooks-client.ts  param-tracker.ts  sanitize-svg.ts  selection-utils.ts  signature-parser.ts  suggestions-client.ts  symbol-completions.ts  textarea-caret.ts  variables-client.ts
src/store/: findStore.ts  logStore.ts  notebookStore.ts
src/styles/: global.css
src/types/: catalog.ts  (+5 more)
tools/: release.py
tools/catalog-gen/: Cargo.toml
tools/catalog-gen/src/: ax_plotting.rs  main.rs  mapping.rs  markdown.rs  package_scanner.rs  parser.rs
(+4 files in other folders)
