[package]
name = "aximar"
version = "0.1.0"
description = "A modern desktop GUI for the Maxima computer algebra system"
authors = ["you"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "aximar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
tempfile = "3"
