[package]
name = "aximar"
version = "0.12.0"
description = "A modern desktop GUI for the Maxima computer algebra system"
authors = ["you"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "aximar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aximar-core = { path = "../crates/aximar-core" }
aximar-mcp = { path = "../crates/aximar-mcp" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
tokio-util = "0.7"
tracing = "0.1"
rand = "0.9"
regex = "1"
thiserror = "2"
tempfile = "3"
tauri-plugin-dialog = "2.6.0"
toml_edit = "0.22"
