[package]
name = "aximar-core"
version = "0.3.0"
edition = "2021"
description = "Core library for Aximar — Tauri-independent Maxima CAS logic"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
thiserror = "2"
tempfile = "3"
