[package]
name = "aximar-mcp"
version = "0.4.1"
edition = "2021"
description = "Headless MCP server for Aximar — exposes Maxima CAS via Model Context Protocol"
license = "GPL-3.0-or-later"

[lib]
name = "aximar_mcp"
path = "src/lib.rs"

[[bin]]
name = "aximar-mcp"
path = "src/main.rs"

[dependencies]
aximar-core = { path = "../aximar-core" }
rmcp = { version = "1.2", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
