[package]
name = "maxima-dap"
version = "0.2.2"
edition = "2021"
description = "Debug Adapter Protocol server for Maxima CAS"
license = "GPL-3.0-or-later"

[[bin]]
name = "maxima-dap"
path = "src/main.rs"

[dependencies]
aximar-core = { path = "../aximar-core" }
maxima-mac-parser = { path = "../maxima-mac-parser" }
emmy_dap_types = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
tracing = "0.1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
