[package]
name = "maxima-lsp"
version = "0.4.0"
edition = "2021"
description = "Language Server Protocol server for Maxima .mac files"

[[bin]]
name = "maxima-lsp"
path = "src/main.rs"

[lib]
name = "maxima_lsp"
path = "src/lib.rs"

[dependencies]
aximar-core = { path = "../aximar-core" }
maxima-mac-parser = { path = "../maxima-mac-parser" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
base64 = "0.22"
regex = "1"
