[package]
name = "catalog-gen"
version = "0.1.0"
edition = "2021"
description = "Generate Maxima function catalog from Texinfo XML"

[[bin]]
name = "catalog-gen"
path = "src/main.rs"

[dependencies]
aximar = { path = "../../src-tauri" }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
